force-app/main/default/objects/LSF_Order_Detail__c/LSF_Order_Detail__c.object-meta.xml
<CustomObject>
    <label>LSF Order Detail</label>
    <nameField>
        <displayFormat>OD-{0000000000}</displayFormat>
        <label>LSF Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSF Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>