force-app/main/default/objects/LSF_Order_Detail__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>LSF_Order__c</referenceTo>
    <relationshipLabel>Order Details</relationshipLabel>
    <relationshipName>LSF_Order_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>