force-app/main/default/objects/LSF_Order_Detail__c/fields/Price_Sheet_Detail__c.field-meta.xml
<CustomField>
    <fullName>Price_Sheet_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Price Sheet Detail</label>
    <referenceTo>LSF_Price_Sheet_Detail__c</referenceTo>
    <relationshipLabel>Order Details</relationshipLabel>
    <relationshipName>LSF_Order_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>